namespaces/live.cloud-platform.service.justice.gov.uk/cli-testing/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cli-testing"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "slack-channel"
    cloud-platform.justice.gov.uk/application: "cli-testing"
    cloud-platform.justice.gov.uk/owner: "cp: cli@test.test.test"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/moj/test"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2026-02-21"
